# hugeint

./: .gitignore  CMakeLists.txt  HugeIntConfig.cmake.in  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
include/: hugeint.h
test/: CMakeLists.txt  main.cpp  tests.cpp
